--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <body class="bg-gray-50 text-gray-800 font-sans">
 
   <!-- Navbar -->
-  <nav class="bg-white shadow fixed w-full z-50">
-<div class="container mx-auto px-4 py-3 flex justify-between items-center">
-  <a href="#home" class="text-2xl font-bold">云加速</a>
-  <div class="hidden md:flex space-x-6">
-    <a href="#home" class="hover:text-blue-600">首页</a>
-    <a href="#blog" class="hover:text-blue-600">博客</a>
-    <a href="#contact" class="hover:text-blue-600">联系我们</a>
-    <a href="/speedtest/" class="hover:text-blue-600">测速</a>
-    <a href="/metrics.html" class="hover:text-blue-600">CDN统计</a>
-    <a href="/edge-nodes.html" class="hover:text-blue-600">全球节点</a>
-    <a href="/status.html" class="hover:text-blue-600">系统状态</a>
-    <a href="/changelog.html" class="hover:text-blue-600">更新日志</a>
+<!-- Navbar -->
+<nav class="bg-white shadow fixed w-full z-50">
+  <div class="container mx-auto px-4 py-3 flex justify-center">
+    <div class="flex space-x-6">
+      <a href="#home" class="hover:text-blue-600">首页</a>
+      <a href="#blog" class="hover:text-blue-600">博客</a>
+      <a href="#contact" class="hover:text-blue-600">联系我们</a>
+      <a href="/speedtest/" class="hover:text-blue-600">测速</a>
+      <a href="/metrics.html" class="hover:text-blue-600">CDN统计</a>
+      <a href="/edge-nodes.html" class="hover:text-blue-600">全球节点</a>
+      <a href="/status.html" class="hover:text-blue-600">系统状态</a>
+      <a href="/changelog.html" class="hover:text-blue-600">更新日志</a>
+    </div>
   </div>
-</div>
-  </nav>
+</nav>
 
   <!-- Hero Section -->
   <section id="home" class="pt-20 bg-gradient-to-r from-blue-500 to-green-500 text-white py-20">
