--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <!-- Navbar -->
 <nav x-data="{ open: false }" class="bg-white shadow fixed w-full z-50">
-  <<div class="container mx-auto px-4 py-5 flex items-center justify-between">
-    <!-- Logo Placeholder（如需保留LOGO可解注释） -->
-    <!-- <a href="#home" class="text-2xl font-bold">LOGO</a> -->
+  <div class="container mx-auto px-4 py-4 flex items-center justify-between">
+    <!-- 可选LOGO区域，如不要可删除 -->
+    <!-- <a href="#home" class="text-xl font-bold text-blue-600">LOGO</a> -->
 
     <!-- 汉堡按钮（移动端） -->
     <button @click="open = !open" class="md:hidden text-gray-800 focus:outline-none">
@@ -30,8 +30,8 @@
       </svg>
     </button>
 
-    <!-- 导航链接 -->
-    <div :class="open ? 'block' : 'hidden'" class="w-full md:flex md:items-center md:justify-center md:w-auto space-y-2 md:space-y-0 md:space-x-6 mt-4 md:mt-0">
+    <!-- 主导航链接 -->
+    <div :class="open ? 'block' : 'hidden'" class="absolute top-full left-0 w-full md:static md:block bg-white md:bg-transparent md:w-auto md:flex md:justify-center md:items-center space-y-2 md:space-y-0 md:space-x-6 px-4 py-4 md:py-0 z-50">
       <a href="#home" class="nav-link">首页</a>
       <a href="#blog" class="nav-link">博客</a>
       <a href="#contact" class="nav-link">联系我们</a>
@@ -43,32 +43,32 @@
     </div>
   </div>
 
-  <!-- 自定义 active 效果样式 -->
-<style>
-  .nav-link {
-    @apply text-gray-800 hover:text-white hover:bg-blue-500 block md:inline-block px-4 py-2 rounded transition duration-200 ease-in-out;
-  }
-
-  .nav-link-active {
-    @apply text-white bg-blue-600 font-semibold;
-  }
-</style>
-
-  <!-- 自动高亮当前页面的 JS 脚本 -->
-  <script>
-document.addEventListener("DOMContentLoaded", function () {
-  const links = document.querySelectorAll(".nav-link");
-  const currentPath = window.location.pathname;
-  links.forEach(link => {
-    const href = link.getAttribute("href");
-    if (href && (href === currentPath || currentPath.endsWith(href))) {
-      link.classList.add("nav-link-active");
+  <!-- 样式：hover + active -->
+  <style>
+    .nav-link {
+      @apply text-gray-700 hover:text-white hover:bg-blue-500 px-4 py-2 rounded block md:inline-block text-center transition duration-200 ease-in-out;
     }
-  });
-});
+
+    .nav-link-active {
+      @apply bg-blue-600 text-white font-semibold;
+    }
+  </style>
+
+  <!-- JS：自动高亮当前页面链接 -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const links = document.querySelectorAll(".nav-link");
+      const currentPath = window.location.pathname + window.location.hash;
+      links.forEach(link => {
+        const href = link.getAttribute("href");
+        if (href && (currentPath === href || currentPath.endsWith(href))) {
+          link.classList.add("nav-link-active");
+        }
+      });
+    });
   </script>
 </nav>
-
+  
   <!-- Hero Section -->
   <section id="home" class="pt-20 bg-gradient-to-r from-blue-500 to-green-500 text-white py-20">
     <div class="container mx-auto px-4 text-center">
