--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </button>
 
     <!-- 主导航链接 -->
-    <div :class="open ? 'block' : 'hidden'" class="absolute top-full left-0 w-full md:static md:block bg-white md:bg-transparent md:w-auto md:flex md:justify-center md:items-center space-y-2 md:space-y-0 md:space-x-6 px-4 py-4 md:py-0 z-50">
+    <div :class="open ? 'flex flex-col space-y-2 px-6 py-4' : 'hidden'" 
+         class="md:flex md:items-center md:justify-center md:space-x-6 md:space-y-0 text-center w-full md:w-auto">
       <a href="#home" class="nav-link">首页</a>
       <a href="#blog" class="nav-link">博客</a>
       <a href="#contact" class="nav-link">联系我们</a>
